src/test/ui/report-similar-candidates-ordering.stderr
error[E0277]: the trait bound `i32: std::convert::From<&str>` is not satisfied
  --> $DIR/report-similar-candidates-ordering.rs:14:21
   |
LL |     let _: i32 = "".into(); //~ ERROR [E0277]
   |                     ^^^^ the trait `std::convert::From<&str>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             <i32 as std::convert::From<bool>>
             <i32 as std::convert::From<i16>>
             <i32 as std::convert::From<i8>>
             <i32 as std::convert::From<u16>>
             <i32 as std::convert::From<u8>>
   = note: required because of the requirements on the impl of `std::convert::Into<i32>` for `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
